<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_view_top"
    style="@style/screenBackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.iftqos.Configuracion" >

    <LinearLayout
        android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingRight="5dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
                    android:layout_height="70dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
            android:src="@drawable/fondo_pantalla_1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pagedrop" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/configuracion" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:text="@string/txtConfig" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/mbmes" />

        <EditText
            android:id="@+id/mbmes1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
             android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/txt12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/mbdestinados" />

        <EditText
            android:id="@+id/mbapp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
             android:inputType="number" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio" />

        <Button
            android:id="@+id/actualizar_config"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/aceptar" />

    </LinearLayout>

</RelativeLayout>